--- a/css-grid.html
+++ b/css-grid.html
@@ -41,16 +41,36 @@
 
         /* CSS GRID */
         display: grid;
-        grid-template-columns: 200px 200px 100px 100px;
-        grid-template-rows: 300px 200px;
+        /*grid-template-columns: 200px 200px 1fr 1fr;*/
+        /*grid-template-columns: 1fr 1fr 1fr auto;*/
+
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr;
 
         /*gap: 30px;*/
-        column-gap: 30px;
-        row-gap: 60px;
+        column-gap: 20px;
+        row-gap: 40px;
+        display: none;
       }
 
+      .el--8{
+        grid-column: 2 / 3;
+        /*grid-row: 1 / span 2;*/
+        grid-row: 1 / 2;
+      }
+
+      .el--2{
+        /*grid-column: 1 / 4;*/
+        /*grid-column: 1 / span 4;*/
+        grid-column: 1 / -1;
+        grid-row: 2;
+      }
+
+      .el--6{
+        /*grid-row: 3 / 5;*/
+      }
       .container--2 {
-        display: none;
+         
         /* STARTER */
         font-family: sans-serif;
         background-color: black;
@@ -61,6 +81,23 @@
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 50px;
+        /*Aligning tracks inside container: distribute empty space*/
+        justify-content: center;
+        /*justify-content: space-between;*/
+        align-content: center;
+
+        /*ALigning items INSIDE cells: moving items around inside cells*/
+        align-items: center;
+        justify-items: center;
+      }
+
+      .el--3{
+        align-self: center;
+        justify-self: center;
       }
     </style>
   </head>
